# pacs-agent

./: .gitignore  CLAUDE.md  GUIDE_FI.md  README.md  pyproject.toml
.github/workflows/: test.yml
config/: example.yaml
scripts/: researcher-load.sh
src/agent_rad_tools/: anonymize.py  cli.py  config.py  loader.py
src/pacs_agent/: __init__.py  anonymize.py  audit.py  cli.py  config.py  keyfile.py  pacs.py  scp.py  tags.py  verify.py
tests/: conftest.py  test_anonymize.py  test_audit.py  test_keyfile.py  test_pacs.py  test_pid_safety.py  test_tags.py  test_verify.py
