[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pacs-agent"
version = "0.1.0"
description = "Agent-first, PID-safe research image loader for hospital PACS"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Mikko Nyman"}]
keywords = ["dicom", "pacs", "anonymization", "medical-imaging", "research", "ai-agent"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydicom>=2.4",
    "pynetdicom>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/mijuny/pacs-agent"
Issues = "https://github.com/mijuny/pacs-agent/issues"

[project.scripts]
rad-loader = "pacs_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
